<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadastroActivity">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cadastro_log1"
        android:textColor="@color/gray_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/textLog"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCadastrar" />

    <TextView
        android:id="@+id/textLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="textCadastrar"
        android:text="@string/cadastro_login"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/buttonCadastrar" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/cadastro_titulo"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editNome"
        app:layout_constraintEnd_toEndOf="@+id/editNome"
        app:layout_constraintStart_toStartOf="@+id/editNome" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_pessoa_24"
        android:ems="10"
        android:hint="@string/cadastro_hintNome"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray_light"
        app:layout_constraintBottom_toTopOf="@+id/editEmail"
        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/editEmail" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_email_24"
        android:ems="10"
        android:hint="@string/cadastro_hintEmail"
        android:inputType="text|textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_cadeado_24"
        android:ems="10"
        android:hint="@string/cadastro_hintSenha"
        android:inputType="text|textPassword"
        android:padding="10dp"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray_light"
        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Button
        android:id="@+id/buttonCadastrar"
        style="@style/botao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/botoes"
        android:text="@string/cadastro_bt"
        app:layout_constraintEnd_toEndOf="@+id/editSenha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editSenha"
        app:layout_constraintTop_toBottomOf="@+id/editSenha" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cadastro_termos"
        android:textColor="@color/gray_light"
        app:layout_constraintEnd_toEndOf="@+id/textLog"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textLog" />
</androidx.constraintlayout.widget.ConstraintLayout>